<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="@drawable/timer_border"
    >

    <LinearLayout
        android:id="@+id/lin_lay_timer_score_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_popup1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/popup">


        <TextView
            android:id="@+id/popup_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/popup_text_id"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/popup_text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/popup_text_time"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/popup_text_id"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_popup1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/lin_lay_bottom_buttons_popup"
        app:layout_constraintLeft_toLeftOf="@+id/popup"
        app:layout_constraintRight_toRightOf="@+id/popup"
        app:layout_constraintTop_toBottomOf="@+id/lin_lay_timer_score_popup">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fadingEdge="none|vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popup_text_id">


            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick1"
                android:text="@string/no_timer" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick1"
                android:text="@string/one_min" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick1"
                android:text="@string/two_min" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick1"
                android:text="@string/three_min" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick1"
                android:text="@string/four_min" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick1"
                android:text="@string/five_min" />

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick1"
                android:text="@string/six_min" />

            <RadioButton
                android:id="@+id/radioButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick1"
                android:text="@string/seven_min" />

            <RadioButton
                android:id="@+id/radioButton9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick1"
                android:text="@string/eight_min" />

            <RadioButton
                android:id="@+id/radioButton10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick1"
                android:text="@string/nine_min" />

        </RadioGroup>

        <TextView
            android:id="@+id/text_plus1_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/plus"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/radioGroup2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="@+id/radioGroup2" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            app:layout_constraintStart_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/popup_text_id">

            <RadioButton
                android:id="@+id/radioButton11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick2"
                android:text="@string/no_timer" />

            <RadioButton
                android:id="@+id/radioButton12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick2"
                android:text="@string/ten_min" />

            <RadioButton
                android:id="@+id/radioButton13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick2"
                android:text="@string/twenty_min" />

            <RadioButton
                android:id="@+id/radioButton14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick2"
                android:text="@string/thirty_min" />

            <RadioButton
                android:id="@+id/radioButton15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick2"
                android:text="@string/fourty_min" />

            <RadioButton
                android:id="@+id/radioButton16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick2"
                android:text="@string/fifty_min" />

            <RadioButton
                android:id="@+id/radioButton17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick2"
                android:text="@string/sixty_min" />

            <RadioButton
                android:id="@+id/radioButton18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick2"
                android:text="@string/seventy_min" />

            <RadioButton
                android:id="@+id/radioButton19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick2"
                android:text="@string/eighty_min" />

            <RadioButton
                android:id="@+id/radioButton20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rbClick2"
                android:text="@string/ninety_min" />
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_lay_bottom_buttons_popup"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_popup1"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/button_timer_ok"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/darker_gray"
            android:text="@string/button_timer_ok"
            app:layout_constraintLeft_toLeftOf="@+id/popup"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_popup1" />

        <Button
            android:id="@+id/button_timer_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/darker_gray"
            android:text="@string/button_timer_cancel"
            app:layout_constraintRight_toRightOf="@+id/popup"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_popup1" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>